--- a/01-cloudformation/mys3bucket.yaml
+++ b/01-cloudformation/mys3bucket.yaml
@@ -1,11 +1,19 @@
 AWSTemplateFormatVersion: "2010-09-09"
+
 Description: s3 bucket stack for Cloudformation task
 
+Parameters:
+  s3bucket:
+    Type: String
+
 Resources:
-  Bucket:
+  S3Bucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: "cf-bucketoottt"
+      BucketName:
+        Ref: s3bucket
+        
+     #BucketName: "cf-bucketoottty" 
 
 # run the below command on your cli to create aws s3 bucket stack
 # aws cloudformation deploy --template-file <mys3bucket.yaml> --stack-name <laeticias3buckmat> --profile <temp> --<region us-east-1>      
