--- a/04-vpcs/1.8.yml
+++ b/04-vpcs/1.8.yml
@@ -7,37 +7,108 @@ Parameters:
     Type: String
   KeyFile:
     Type: String
-  Username:
+  MyIP:
     Type: String
 
 Resources:
-  PubNacl:
-    Type: "AWS::EC2::NetworkAcl"
+  EC2Instance:
+    Type: "AWS::EC2::Instance"
     Properties:
-      VpcId:  !ImportValue vpctask-VPC
-  
-  PubInbound:
-    Type: AWS::EC2:NetworkAclEntry
-    Properties:
-      NetworkAclId: !Ref PubNaclId
-      RuleNumber: 100
-      Protocol: tcp
-      RuleAction: allow
-      Egress: "true"
-      CidrBlock: 0.0.0.0/0
-      PortRange:
-        From: 22
-        To: 22
+      ImageId: !Ref AMI
+      InstanceType: !Ref InstanceType
+      KeyName: !Ref KeyFile
+      SubnetId: !ImportValue vpctask-mypubSubnet
+      SecurityGroupIds:
+        - Ref: InstanceSecurityGroup
 
-  PubOutbound:
-    Type: AWS::EC2:NetworkAclEntry
+  InstanceSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
     Properties:
-      NetworkAclId: !Ref PubNaclId
-      RuleNumber: 500
-      Protocol: tcp
-      RuleAction: allow
-      Egress: "true"
-      CidrBlock: 0.0.0.0/0
-      PortRange:
-        From: 80
-        To: 80 
+      GroupDescription: Allow ssh/ICMP
+      VpcId: !ImportValue vpctask-VPC
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: !Ref MyIP
+        - IpProtocol: icmp
+          FromPort: 8
+          ToPort: -1
+          CidrIp: !Ref MyIP
+
+  MyEIP:
+    Type: AWS::EC2::EIP
+    Properties:
+      Domain: vpc
+      InstanceId: !Ref EC2Instance
+
+  MyEIP2:
+    Type: AWS::EC2::EIP
+    Properties:
+      Domain: vpc
+  
+  NAT:
+   Type: AWS::EC2::NatGateway
+   Properties:
+      AllocationId: !GetAtt MyEIP2.AllocationId
+      SubnetId: !ImportValue vpctask-mypubSubnet
+
+  Subnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !ImportValue vpctask-VPC
+      CidrBlock: 10.0.1.0/24
+
+  PvtRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !ImportValue vpctask-VPC
+  
+  PvtRoute:
+    Type: AWS::EC2::Route
+    Properties:
+        RouteTableId: !Ref PvtRouteTable
+        DestinationCidrBlock: 0.0.0.0/0
+        NatGatewayId: !Ref NAT
+
+  SubnetRouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId:
+        Ref: Subnet2
+      RouteTableId:
+        Ref: PvtRouteTable
+
+  PrivateHostSecurityGroup:
+    Type: 'AWS::EC2::SecurityGroup'
+    Properties:
+      VpcId: !ImportValue vpctask-VPC
+      GroupDescription: Enable SSH access via port 22
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          SourceSecurityGroupId: !Ref InstanceSecurityGroup
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          SourceSecurityGroupId: !Ref InstanceSecurityGroup
+        - IpProtocol: icmp
+          FromPort: 8
+          ToPort: -1
+          SourceSecurityGroupId: !Ref InstanceSecurityGroup
+
+  EC2Instance2:
+    Type: "AWS::EC2::Instance"
+    Properties:
+      ImageId: !Ref AMI
+      InstanceType: !Ref InstanceType
+      KeyName: !Ref KeyFile
+      SubnetId: !Ref Subnet2
+      SecurityGroupIds: 
+        - !Ref PrivateHostSecurityGroup
+
+
+Outputs:
+  PublicIP:
+    Value: !GetAtt EC2Instance.PublicIp
