--- a/06-auto-scaling/1.4.yml
+++ b/06-auto-scaling/1.4.yml
@@ -2,6 +2,13 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: ASG task using Cloudformation
 
 Resources:
+  Debian:
+    Type: AWS::EC2::Instance
+    Properties:
+      LaunchTemplate:
+        LaunchTemplateName: DebianLT
+        Version: 1
+
   myLaunchConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
@@ -11,22 +18,19 @@ Resources:
       BlockDeviceMappings:
       - DeviceName: /dev/sda
         VirtualName: ephemeral0
-
   
   myASG:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
-      AutoScalingGroupName: LHmyASG
+      AutoScalingGroupName: myASG
       AvailabilityZones: 
-        Fn::GetAZs: us-east-1
+        - us-east-1a
+        - us-east-1b
+        - us-east-1c
       LaunchConfigurationName: !Ref myLaunchConfig
       MaxSize: "1"
-      MinSize: "1"
+      MinSize: "0"
       DesiredCapacity: "1"
-      Tags:
-        - Key: Environment
-          Value: Production
-          PropagateAtLaunch: "True"
     UpdatePolicy:
       AutoScalingReplacingUpdate:
         WillReplace: "True"  
