--- a/06-auto-scaling/1.2.yml
+++ b/06-auto-scaling/1.2.yml
@@ -2,33 +2,22 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: ASG task using Cloudformation
 
 Resources:
-  Debian:
-    Type: AWS::EC2::Instance
-    Properties:
-      LaunchTemplate:
-        LaunchTemplateName: DebianLT
-        Version: 1
-
   myLaunchConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
       ImageId: ami-07d02ee1eeb0c996c
       InstanceType: t2.micro
-      KeyName: myec2kp
-      BlockDeviceMappings:
-      - DeviceName: /dev/xvda
-        VirtualName: ephemeral0
+      KeyName: TestKey
 
   myASG:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
-      AutoScalingGroupName: LHmyASG
       AvailabilityZones: 
         - us-east-1a
         - us-east-1b
         - us-east-1c
       MaxSize: "1"
-      MinSize: "0"
+      MinSize: "1"
       DesiredCapacity: "1"
       LaunchConfigurationName: !Ref myLaunchConfig
 
