Updating and Adding Moudule tasks

--- a/06-auto-scaling/1.1.yml
+++ b/06-auto-scaling/1.1.yml
@@ -5,6 +5,5 @@ Resources:
   Debian:
     Type: AWS::EC2::Instance
     Properties:
-      LaunchTemplate:
-        LaunchTemplateName: DebianLT
-        Version: 1
+      ImageId: ami-07d02ee1eeb0c996c
+      InstanceType: t2.micro
