--- a/06-auto-scaling/1.3.yml
+++ b/06-auto-scaling/1.3.yml
@@ -5,30 +5,27 @@ Resources:
   Debian:
     Type: AWS::EC2::Instance
     Properties:
-      ImageId: 
+      ImageId: ami-07d02ee1eeb0c996c
+      InstanceType: t2.small
+
   myLaunchConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
       ImageId: ami-07d02ee1eeb0c996c
       InstanceType: t2.small
-      KeyName: myec2kp
-      BlockDeviceMappings:
-      - DeviceName: /dev/sda
-        VirtualName: ephemeral0
+
 
   myASG:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
-      AutoScalingGroupName: LHmyASG
       AvailabilityZones: 
         - us-east-1a
         - us-east-1b
         - us-east-1c
       LaunchConfigurationName: !Ref myLaunchConfig
       MaxSize: "1"
-      MinSize: "0"
+      MinSize: "1"
       DesiredCapacity: "1"
-      Tags:
-        - Key: Environment
-          Value: Production
-          PropagateAtLaunch: "True"
+    UpdatePolicy:
+      AutoscalingReplacingUpdate:
+        WillReplace: 'true'
